--- a/Labo 2/index.html
+++ b/Labo 2/index.html
@@ -7,7 +7,8 @@
   <script src="./js/script.js" defer></script>
 </head>
 <body>
-
+	
+    <h1> Heure avant noel :</h1>	
     <button id="boutonHeures">Afficher le temps restant en heures</button>
 	<br>
     <button id="boutonJours">Afficher le temps restant en jours, heures et minutes</button>
